# react-native-localize

./: package.json
harmony/: rn_localize.har
harmony/rn_localize/: .gitignore  BuildProfile.ets  LICENSE  README.OpenSource  oh-package.json5  ts.ts
harmony/rn_localize/src/main/: module.json5
harmony/rn_localize/src/main/cpp/: CMakeLists.txt  RNLocalizePackage.h  RNLocalizeTurboModule.cpp  RNLocalizeTurboModule.h
harmony/rn_localize/src/main/ets/: Logger.ts  RNLocalizeModule.ts  RNLocalizePackage.ts  RNLocalizeTurboModule.ts
